# QUAI

./: .env.example  .gitignore  .gitlab-ci.yml  QUAI_Postman_Collection.json  README.md  ai  auto_setup_whisper.sh  check_whisper_download.sh  composer.json  docker-compose.searxng.yml  docker-compose.yml  package-lock.json  package.json  setup_myqu_sso.sh  start-servers.sh  test_knowledge_retrieval.php  test_ollama_direct.php  test_ollama_smart_advisor.sh  test_web_simulation.php  vite.config.js
QSPARK/: .env.example  .gitlab-ci.yml  README.md  cloud-build.sh  composer.json  package-lock.json
QUAI/: .env.example  README.md  pyproject.toml
QUBI/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
bootstrap/: app.php  providers.php
config/: app.php  auth.php  cache.php  database.php  filament-shield.php  logging.php  quai.php  reviews.php  services.php
deploy/: SAME_DOMAIN_SETUP.md
docs/: QMentor_66_Indicators_API_Map.docx  SmartAdvisor_V1_Technical.docx  build_sla_policy.py  generate_66_indicators.py  generate_smart_advisor_v1.py  generate_srs_docx.py  generate_srs_docx_en.py  generate_srs_pro.py  sla-policy.docx  ~$entor_SRS_AR.docx
file_extraction/: .dockerignore  Dockerfile  README.md  config.py  main.py  models.py  requirements.txt
public/: embed-demo.html  test-quiz-api.html
python_executor/: Dockerfile  main.py  requirements.txt
routes/: api.php  qspark-api.php  qspark.php  web.php
scripts/: capture-dashboards.mjs  pad-triple-names.mjs  sanitize-triple-names.mjs  smoke.mjs
searxng/: limiter.toml  (+1 more)
(+802 files in other folders)
